# programmiersprachen-aufgabenblatt-2

./: aufgabe_2_9.md
applications/: CMakeLists.txt  clock.cpp  example.cpp  tests.cpp
framework/: circle.cpp  circle.hpp  color.hpp  mat2.cpp  mat2.hpp  rectangle.cpp  rectangle.hpp  vec2.cpp  vec2.hpp
